Implement hybrid architecture: stateless router + single stateful processor
Replaces the optimal branch's CombinedProcessor (which fixed parallelism at
4 dataset keys) with a design that preserves horizontal scalability via
--num-slots N while still eliminating two of three checkpoint-writing operators.

Changes:
- StatelessRouter (new): pure flatMap that fan-outs events by numSlots without
  any GroupState — zero HDFS checkpoint writes per batch
- SynopsisProcessor: restored as the single stateful operator, keyed by KEYED
  slot key (baseKey_N_KEYED_i) — one executor per slot enables scaling
- ReduceAggregator: kept stateless (flatMapGroups, no state) from Priority 2
- InputEvent: routingKey field added so the underlying dataSetKey (base key)
  is preserved for Estimation output while a separate routing key drives groupByKey
- SDEConfig: --num-slots N flag (default 1) controls parallelism at deploy time
- CombinedProcessor / CombinedState deleted (belong to optimal branch only)
- 13 StatelessRouterTest cases verify routing correctness, fan-out count, slot
  hash formula, noOfP propagation, and key preservation

All 63 tests pass. Checkpoint files per batch: 3 operators x P → 1 operator x P.