@@ -1,14 +1,16 @@
 package infore.sde.spark.integration;
 
+import infore.sde.spark.aggregation.ReduceAggregator;
 import infore.sde.spark.config.SDEConfig;
 import infore.sde.spark.ingestion.KafkaIngestionLayer;
 import infore.sde.spark.messages.Datapoint;
 import infore.sde.spark.messages.Estimation;
 import infore.sde.spark.messages.Request;
 import infore.sde.spark.output.KafkaOutputLayer;
-import infore.sde.spark.processing.CombinedProcessor;
-import infore.sde.spark.processing.CombinedState;
 import infore.sde.spark.processing.InputEvent;
+import infore.sde.spark.processing.SynopsisProcessor;
+import infore.sde.spark.processing.SynopsisProcessorState;
+import infore.sde.spark.routing.StatelessRouter;
 
 import org.apache.spark.api.java.function.MapFunction;
 import org.apache.spark.sql.Dataset;
@@ -23,29 +25,21 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * End-to-end integration test: all 6 layers.
+ * End-to-end integration test: all 5 layers (hybrid architecture).
  *
  * Identical to SDESparkApp but runs locally and also mirrors output to console
  * so we can see results without needing a separate Kafka consumer.
  *
- * Writes to Kafka estimation_topic (Layer 6) AND prints to console.
- *
  * Usage:
- *   java --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
- *        --add-opens java.base/java.lang=ALL-UNNAMED \
- *        --add-opens java.base/java.nio=ALL-UNNAMED \
- *        --add-opens java.base/java.lang.invoke=ALL-UNNAMED \
- *        --add-opens java.base/java.util=ALL-UNNAMED \
- *        -cp target/sde-spark-1.0.0-SNAPSHOT.jar \
+ *   java -cp target/sde-spark-1.0.0-SNAPSHOT.jar \
  *        infore.sde.spark.integration.EndToEndTestApp \
- *        --kafka-brokers localhost:9092
+ *        --kafka-brokers localhost:9092 [--num-slots 4]
  */
 public class EndToEndTestApp {
 
     private static final Logger LOG = LoggerFactory.getLogger(EndToEndTestApp.class);
 
     public static void main(String[] args) throws Exception {
-        // Override checkpoint to local temp for testing (default is hdfs://)
         String checkpointBase = System.getProperty("java.io.tmpdir") + "/sde-spark-e2e-test";
         String[] fullArgs = java.util.stream.Stream.concat(
                 java.util.Arrays.stream(args),
@@ -58,41 +52,51 @@ public class EndToEndTestApp {
                 .master("local[*]")
                 .config("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
                 .config("spark.sql.streaming.checkpointLocation", checkpointBase)
-                .config("spark.sql.shuffle.partitions", "4")
+                .config("spark.sql.shuffle.partitions", String.valueOf(Math.max(4, config.getNumSlots())))
                 .getOrCreate();
 
-        LOG.info("=== End-to-End Test (All 6 Layers) ===");
+        LOG.info("=== End-to-End Test (Hybrid Architecture) ===");
         LOG.info("Kafka brokers:  {}", config.getKafkaBrokers());
         LOG.info("Data topic:     {}", config.getDataTopic());
         LOG.info("Request topic:  {}", config.getRequestTopic());
         LOG.info("Output topic:   {}", config.getOutputTopic());
+        LOG.info("numSlots:       {}", config.getNumSlots());
 
         // ──── Layer 1: Ingestion ────
         KafkaIngestionLayer ingestion = new KafkaIngestionLayer(spark, config);
         Dataset<Datapoint> dataStream = ingestion.readDataStream();
         Dataset<Request> requestStream = ingestion.readRequestStream();
 
-        // ──── Layers 2+3: Combined routing + synopsis lifecycle ────
+        // ──── Layer 2: Stateless routing ────
         Dataset<InputEvent> taggedData = dataStream.map(
                 (MapFunction<Datapoint, InputEvent>) InputEvent::data,
                 Encoders.kryo(InputEvent.class));
         Dataset<InputEvent> taggedRequests = requestStream.map(
                 (MapFunction<Request, InputEvent>) InputEvent::request,
                 Encoders.kryo(InputEvent.class));
-        Dataset<InputEvent> combined = taggedData.union(taggedRequests);
 
-        KeyValueGroupedDataset<String, InputEvent> groupedByBaseKey = combined.groupByKey(
-                (MapFunction<InputEvent, String>) InputEvent::getDataSetKey,
+        Dataset<InputEvent> routed = taggedData.union(taggedRequests)
+                .flatMap(new StatelessRouter(config.getNumSlots()),
+                        Encoders.kryo(InputEvent.class));
+
+        // ──── Layer 3: Synopsis lifecycle ────
+        KeyValueGroupedDataset<String, InputEvent> groupedBySlotKey = routed.groupByKey(
+                (MapFunction<InputEvent, String>) InputEvent::getRoutingKey,
                 Encoders.STRING());
 
-        Dataset<Estimation> allEstimations = groupedByBaseKey.flatMapGroupsWithState(
-                new CombinedProcessor(config),
+        Dataset<Estimation> partialEstimations = groupedBySlotKey.flatMapGroupsWithState(
+                new SynopsisProcessor(config),
                 OutputMode.Append(),
-                Encoders.kryo(CombinedState.class),
+                Encoders.kryo(SynopsisProcessorState.class),
                 Encoders.kryo(Estimation.class),
                 GroupStateTimeout.ProcessingTimeTimeout());
 
-        // ──── Layer 6: Output to Kafka ────
+        // ──── Layer 4: Stateless aggregation ────
+        Dataset<Estimation> allEstimations = partialEstimations
+                .groupByKey((MapFunction<Estimation, Integer>) Estimation::getUid, Encoders.INT())
+                .flatMapGroups(new ReduceAggregator(), Encoders.kryo(Estimation.class));
+
+        // ──── Layer 5: Output to Kafka ────
         KafkaOutputLayer outputLayer = new KafkaOutputLayer(config);
         StreamingQuery kafkaQuery = outputLayer.write(allEstimations, "sde-e2e-output");
 
@@ -113,7 +117,7 @@ public class EndToEndTestApp {
                 .queryName("e2e-console")
                 .start();
 
-        LOG.info("=== All 6 layers started. Send messages to Kafka. ===");
+        LOG.info("=== All layers started. Send messages to Kafka. ===");
         LOG.info("=== Press Ctrl+C to stop. ===");
 
         spark.streams().awaitAnyTermination();
